# tranquillyzer

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  MANIFEST.in  __init__.py  bc_log.txt  codecov.yml  conftest.py  environment.yml  main.py  prek.toml  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml  lint.yml  test.yml
docs/: _quarto.yml  index.qmd
docs/webpages/: contributing.qmd  install.qmd  model_training.qmd  pipeline_guide.qmd  quick_start.qmd  releases.qmd  resource_requirements.qmd  usage.qmd
docs/webpages/model_training/: assess_model.qmd  intro_errors.qmd  read_simulation.qmd  simulate_data_cli.qmd  train_model.qmd  train_model_cli.qmd
docs/webpages/pipeline/: align_dedup.qmd  annotation.qmd  barcode_demux.qmd  featurecounts.qmd  preprocessing.qmd  qc_metrics.qmd  split_bam.qmd  visualization.qmd
scripts/: annotate_new_data.py  annotate_reads.py  annotate_reads_helpers.py  barcode_correction.py  container_runtime.py  correct_barcodes.py  deduplicate.py  demultiplex.py  discover_barcodes.py  evaluate_model.py  export_annotations.py  export_demux.py  extract_annotated_seqs.py  featurecounts_matrix.py  plot_read_len_distr.py  preprocess_reads.py  qc_metrics.py  qc_metrics_helpers.py  simulate_training_data.py  split_bam_file.py  train_new_model.py  trained_models.py  visualize_annot.py
tests/10x3p/: test_pipeline.py
tests/unit/: test_annotation_checkpoint_chunk_size.py  test_bc_quals_polya_opts.py  test_init_version.py  test_seq_orders_refactor.py
utils/: __init__.py  seq_orders.tsv  seq_orders.yaml  training_params.tsv  training_params.yaml  training_seq_orders.tsv
wrappers/: align_wrap.py  annotate_reads_wrap.py  barcode_correction_wrap.py  dedup_wrap.py  demux_wrap.py  evaluate_model_wrap.py  featurecounts_wrap.py  generate_whitelist_wrap.py  preprocess_wrap.py  qc_metrics_wrap.py  read_length_distr_wrap.py  simulate_data_wrap.py  split_bam_wrap.py  train_model_wrap.py  visualize_wrap.py
